@@ -1,10 +1,10 @@
 package com.pacific.pacificbe.mapper;
 
 import com.pacific.pacificbe.dto.request.CreateTourRequest;
+import com.pacific.pacificbe.dto.response.BaseTourResponse;
 import com.pacific.pacificbe.dto.response.TourDetailResponse;
-import com.pacific.pacificbe.dto.response.TourInDetailResponse;
+import com.pacific.pacificbe.dto.response.TourByIdResponse;
 import com.pacific.pacificbe.dto.response.TourResponse;
-import com.pacific.pacificbe.model.Image;
 import com.pacific.pacificbe.model.Tour;
 import com.pacific.pacificbe.model.TourDetail;
 import com.pacific.pacificbe.utils.IdUtil;
@@ -35,13 +35,53 @@ public class TourMapper {
     }
 
     public TourResponse toTourResponse(Tour tour) {
-        TourResponse tourResponse = modelMapper.map(tour, TourResponse.class);
+        return toBaseTourResponse(new TourResponse(), tour);
+    }
+
+    public TourByIdResponse toTourByIdResponse(Tour tour) {
+        TourByIdResponse tourResponse = toBaseTourResponse(new TourByIdResponse(), tour);
+        tourResponse.setDetail(
+                tour.getTourDetails().stream()
+                        .map(this::toTourDetailResponse)
+                        .toList());
+        return tourResponse;
+    }
+
+    public TourDetailResponse toTourDetailResponse(TourDetail tourDetail) {
+        return modelMapper.map(tourDetail, TourDetailResponse.class);
+    }
+
+    public List<TourResponse> toTourResponseList(List<Tour> tours) {
+        return tours.stream()
+                .map(this::toTourResponse)
+                .toList();
+    }
+
+    public List<TourDetailResponse> toTourDetailResponseList(List<TourDetail> tourDetails) {
+        return tourDetails.stream().map(this::toTourDetailResponse).toList();
+    }
+
+    private <T extends BaseTourResponse> T toBaseTourResponse(T tourResponse, Tour tour ) {
+        modelMapper.map(tour, tourResponse);
+
         tourResponse.setImages(tour.getImages().stream()
                 .map(image -> idUtil.getIdImage(image.getImageUrl()))
-                .collect(Collectors.toList()));
+                .toList());
+
+        if (tour.getThumbnailUrl() != null) {
+            tourResponse.setThumbnail(idUtil.getIdImage(tour.getThumbnailUrl()));
+        }
         if (tour.getCategory() != null) {
             tourResponse.setCategory(tour.getCategory().getTitle());
         }
+        if (tour.getDestination() != null) {
+            tourResponse.setDestination(tour.getDestination().getCountry());
+        }
+
+        tourResponse.setRatingAvg(tour.getTourDetails().stream()
+                .mapToDouble(TourDetail::getRatingAvg)
+                .average()
+                .orElse(0.0));
 
         List<TourDetail> activeTourDetails = tour.getTourDetails().stream()
                 .filter(TourDetail::isActive)
@@ -59,34 +99,4 @@ public class TourMapper {
         }
         return tourResponse;
     }
-
-    public TourInDetailResponse toTourInDetailResponse(Tour tour) {
-        TourInDetailResponse tourResponse = modelMapper.map(tour, TourInDetailResponse.class);
-        tourResponse.setImages(tour.getImages().stream()
-                .map(image -> idUtil.getIdImage(image.getImageUrl()))
-                .collect(Collectors.toList()));
-        if (tour.getCategory() != null) {
-            tourResponse.setCategory(tour.getCategory().getTitle());
-        }
-        return tourResponse;
-    }
-
-    public TourDetailResponse toTourDetailResponse(TourDetail tourDetail) {
-        TourDetailResponse tourDetailResponse = modelMapper.map(tourDetail, TourDetailResponse.class);
-        TourInDetailResponse tourResponse = this.toTourInDetailResponse(tourDetail.getTour());
-        tourDetailResponse.setTour(tourResponse);
-        return tourDetailResponse;
-    }
-
-    public List<TourResponse> toTourResponseList(List<Tour> tours) {
-        return tours.stream()
-                .map(this::toTourResponse)
-                .toList();
-    }
-
-    public List<TourDetailResponse> toTourDetailResponseList(List<TourDetail> tourDetails) {
-        return tourDetails.stream().map(this::toTourDetailResponse).toList();
-    }
-
-
 }
